<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textViewMainTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/main_menu_title"
        android:textAlignment="center"
        android:textSize="24sp" />

    <Button
        android:id="@+id/buttonMainMeasurement"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/measurement"
        android:textSize="24sp" />

    <Button
        android:id="@+id/buttonMainProperties"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/properties"
        android:textSize="24sp" />

    <Button
        android:id="@+id/buttonMainSensorProperties"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sensor_properties"
        android:textSize="24sp" />

</LinearLayout>