<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sensor_properties_menu_title"
        android:textAlignment="center"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_pressure"
        android:textAlignment="center"
        android:textSize="18sp" />

    <Spinner
        android:id="@+id/spinnerPressure"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/pressure" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_interval"
        android:textAlignment="center"
        android:textSize="18sp" />

    <Spinner
        android:id="@+id/spinnerInterval"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/interval" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_filter"
        android:textAlignment="center"
        android:textSize="18sp" />

    <Spinner
        android:id="@+id/spinnerFilter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/filter" />

</LinearLayout>